# AI-Job-Recommender-System

./: README.md  app.py  mcp_server.py  pyproject.toml
src/: helper.py  job_api.py
